<resources>
    <string name="app_name">tp_4_basicactivity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textVienNom">Nom :</string>
    <string name="textVienPrenom">Prénom :</string>
    <string name="textVienAge">Age :</string>
    <string name="buttonSave">Save</string>
    <string name="buttonLoad">Load</string>
    <string name="buttonClear">Clear</string>
</resources>