<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment">


    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/textVienNom"
                android:minHeight="30dp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="30dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/prenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/textVienPrenom"
                android:minHeight="30dp" />

            <EditText
                android:id="@+id/editTextTextPre323Name2"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="30dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/textVienAge"
                android:minHeight="30dp" />

            <EditText
                android:id="@+id/editTextTextAge"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="30dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="80dp"
        android:textAlignment="center">


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/buttonSave" />


        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"

            android:text="@string/buttonClear" />
    </LinearLayout>

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="210dp"
        android:text="@string/previous"
        />

</LinearLayout>